Fixed spacing between buttons

--- a/src/App.css
+++ b/src/App.css
@@ -341,7 +341,7 @@ margin-top: 10vh;
 	}
 
 	.button-1, .button-2 {
-		font-size: 0.9rem;
+		font-size: 0.75rem;
 	}
 }
 
